--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "cypress": "^13.15.0",
+    "cypress-multi-reporters": "^2.0.4",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
@@ -26,6 +27,7 @@
     "globals": "^15.11.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
+    "mochawesome": "^7.1.3",
     "prettier": "^3.3.3",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.8.1"
