--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^8.8.1",
     "cypress": "^13.15.0",
     "cypress-multi-reporters": "^2.0.4",
+    "cypress-plugin-api": "^2.11.2",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
